# website

./: .dockerignore  .env.example  .eslintignore  .eslintrc.json  .gitignore  .gitmodules  .lintstagedrc.json  .prettierignore  .stylelintrc.mjs  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  base.Dockerfile  commitlint.config.cjs  compose.yml  contentlayer.config.js  eslint.config.mjs  foo.ts  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.cjs  rollup.config.js  tailwind.config.cjs  tailwind.config.ts  tsconfig.json  turbo.json
.contentlayer/: package.json
.github/: pull_request_template.md
.github/workflows/: docker.yml  firebase-hosting-merge.yml  firebase-hosting-pull-request.yml  lint.yml  preview.yml  production.yml  test.yml
.husky/: commit-msg  pre-commit  pre-push
firebase/: .firebaserc  package-lock.json  package.json  tsconfig.json  tsconfig.node.tsbuildinfo  vite.config.d.ts  vite.config.js
firebase/.firebase/: hosting.LmZpcmViYXNlXGNvbnN1bHRpbmctbGxjLTYzMDJmXGhvc3Rpbmc.cache
scripts/: build-registry.mts  test-import.mts
self-host/: .dockerignore  .env.example  .eslintignore  .eslintrc.json  .gitignore  Dockerfile  LICENSE  Makefile  VERCEL-README.md  authors.json  components.json  contentlayer.config.js  drizzle.config.ts  eslint.config.mjs  jest.config.mjs  next.calendar.constants.mjs  next.config.mjs  next.json.mjs  package-lock.json  package.json  prettier.config.cjs  routes.constants.mjs  tailwind.config.ts  tsconfig.json  tsconfig.scripts.json  vitest.config.ts
(+496 files in other folders)
